--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Clipper</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Stores</string>
+    <string name="title_section2">Map</string>
+    <string name="title_section3">Top Deals</string>
 
     <string name="hello_world">Hello world!</string>
 
