--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,12 @@
 <resources>
     <string name="app_name">Clipper</string>
-
-<<<<<<< HEAD
-    <string name="title_section1">List View</string>
-    <string name="title_section2">Map View</string>
-    <string name="title_section3">Best Deals</string>
-=======
     <string name="title_section1">Stores</string>
     <string name="title_section2">Map</string>
     <string name="title_section3">Top Deals</string>
->>>>>>> c3e93ddf03c09cb79d7603d5c77841e6ce46b134
-
     <string name="hello_world">Hello world!</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
