--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_store_info">StoreInfo</string>
     <string name="title_activity_store">StoreActivity</string>
+    <string name="title_activity_action_browse">ActionBrowse</string>
 </resources>
